--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,23 +12,51 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatButton
+<!--    <android.support.v7.widget.AppCompatButton
         android:id="@+id/gonlbt"
         android:layout_width="500px"
         android:layout_height="300px"
-        android:text="구글스피치 테스트" />
+        android:text="구글스피치 테스트" />-->
+
+
+    <!--    <android.support.v7.widget.AppCompatButton
+            android:id = "@+id/gospeechunion"
+            android:layout_width="500px"
+            android:layout_height="300px"
+            android:text="통합 테스트" />-->
 
     <android.support.v7.widget.AppCompatButton
-        android:id = "@+id/gospeechbt"
-        android:layout_width="500px"
-        android:layout_height="300px"
-        android:text="구글 자연어처리 테스트" />
-
-
+        android:id="@+id/gospeechbt"
+        android:layout_width="match_parent"
+        android:layout_height="150px"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="로떼바리! 나 물어볼거 있어" />
     <android.support.v7.widget.AppCompatButton
-        android:id = "@+id/gospeechunion"
-        android:layout_width="500px"
-        android:layout_height="300px"
-        android:text="통합 테스트" />
+    android:id="@+id/gomapbt"
+    android:layout_width="match_parent"
+    android:layout_height="150px"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:text="맵테스트" />
+
+    <VideoView
+        android:id="@+id/videoView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:text="Loading..."
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <!--<TextView-->
+        <!--android:id="@+id/textView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="800px"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:text="광고 재생 공간!"></TextView>-->
+
 </LinearLayout>
+
 </RelativeLayout>
