--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,97 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-
-
-<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@drawable/space"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:theme="@style/Theme.AppCompat.NoActionBar"
+    tools:context=".MainActivity">
 
-<!--    <android.support.v7.widget.AppCompatButton
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
+
+        <!--    <android.support.v7.widget.AppCompatButton
         android:id="@+id/gonlbt"
         android:layout_width="500px"
         android:layout_height="300px"
         android:text="구글스피치 테스트" />-->
 
 
-    <!--    <android.support.v7.widget.AppCompatButton
+        <!--    <android.support.v7.widget.AppCompatButton
             android:id = "@+id/gospeechunion"
             android:layout_width="500px"
             android:layout_height="300px"
             android:text="통합 테스트" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:orientation="horizontal">
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/gospeechbt"
-        android:layout_width="match_parent"
-        android:layout_height="150px"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="로떼바리! 나 물어볼거 있어" />
-    <android.support.v7.widget.AppCompatButton
-    android:id="@+id/gomapbt"
-    android:layout_width="match_parent"
-    android:layout_height="150px"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    android:text="맵테스트" />
+            <TextView
+                android:layout_width="200px"
+                android:layout_height="150px"
+                android:gravity="center"
+                android:text="현재지점"
+                android:textAlignment="center"
+                android:textColor="@android:color/white" />
 
-    <VideoView
-        android:id="@+id/videoView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="Loading..."
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="150px"
+                android:layout_weight="1"></Spinner>
 
-    <!--<TextView-->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/seven" />
+        </LinearLayout>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/gospeechbt"
+            android:layout_width="wrap_content"
+            android:layout_height="150px"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/bt"
+            android:text="로떼바리! 나 물어볼거 있어"
+            android:textColor="@android:color/black" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/gomapbt"
+            android:layout_width="match_parent"
+            android:layout_height="150px"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="맵테스트"
+            android:visibility="gone" />
+
+        <VideoView
+            android:id="@+id/videoView1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:foregroundGravity="center"
+            android:text="Loading..."
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <!--<TextView-->
         <!--android:id="@+id/textView"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="800px"-->
         <!--android:layout_gravity="center"-->
         <!--android:text="광고 재생 공간!"></TextView>-->
 
-</LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
