--- a/LDCC-84-3/app/src/main/res/layout/activity_main_nl.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main_nl.xml
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+        android:theme="@style/AppTheme">
 
         <FrameLayout
             android:id="@+id/input_frame"
@@ -58,7 +58,7 @@
                 android:paddingTop="16dp"
                 android:text="@string/sample_text"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white" />
 
             <ImageButton
                 android:id="@+id/analyze"
@@ -68,7 +68,7 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:padding="16dp"
                 android:tint="@color/accent"
-                app:srcCompat="@drawable/ic_send"/>
+                app:srcCompat="@drawable/ic_send" />
 
         </FrameLayout>
 
@@ -80,13 +80,13 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
+<!--        <TextView
             android:id="@+id/introduction"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/spacing_medium"
             android:text="@string/introduction"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>-->
 
         <LinearLayout
             android:id="@+id/results"
