--- a/LDCC-84-3/app/src/main/res/values/dimens.xml
+++ b/LDCC-84-3/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="spacing_large">32dp</dimen>
     <dimen name="spacing_small">8dp</dimen>
     <dimen name="page_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
