--- a/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
@@ -25,9 +25,9 @@
         android:layout_weight="3"
         app:srcCompat="@drawable/v1p" />
 
-    <include android:layout="@layout/final_result" android:id="@+id/item1"></include>
-    <include android:layout="@layout/final_result" android:id = "@+id/item2"></include>
-    <include android:layout="@layout/final_result" android:id = "@+id/item3"></include>
+    <include layout="@layout/final_result" android:id="@+id/item1"></include>
+    <include layout="@layout/final_result" android:id = "@+id/item2"></include>
+    <include layout="@layout/final_result" android:id = "@+id/item3"></include>
     <!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"-->
         <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
         <!--xmlns:tools="http://schemas.android.com/tools"-->
