--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
                 android:layout_width="200px"
                 android:layout_height="150px"
                 android:gravity="center"
-                android:text="현재지점"
+                android:text="Your location"
                 android:textAlignment="center"
                 android:textColor="@android:color/white" />
 
@@ -64,7 +64,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/bt"
-            android:text="로떼바리! 나 물어볼거 있어"
+            android:text="I need your help"
             android:textColor="@android:color/black" />
 
         <android.support.v7.widget.AppCompatButton
@@ -73,7 +73,7 @@
             android:layout_height="150px"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:text="맵테스트"
+            android:text="Map Test"
             android:visibility="gone" />
 
         <VideoView
