--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/space"
+    android:background="@drawable/seveneleven"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,9 +15,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
+        android:weightSum="1"
+        android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:orientation="vertical">
+        android:layout_alignParentStart="true">
 
         <!--    <android.support.v7.widget.AppCompatButton
         android:id="@+id/gonlbt"
@@ -54,18 +55,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/seven" />
+                app:srcCompat="@drawable/smallseven1" />
         </LinearLayout>
+
+        <VideoView
+            android:id="@+id/videoView1"
+            android:layout_width="fill_parent"
+            android:layout_height="234dp"
+            android:foregroundGravity="center"
+            android:text="Loading..."
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp"
+            android:layout_weight="0.97" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/gospeechbt"
-            android:layout_width="wrap_content"
-            android:layout_height="150px"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/bt"
+            android:layout_width="142dp"
+            android:layout_height="144dp"
+            android:background="@drawable/Llimy1"
             android:text="I need your help"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/gomapbt"
@@ -75,15 +84,6 @@
             android:layout_alignParentTop="true"
             android:text="Map Test"
             android:visibility="gone" />
-
-        <VideoView
-            android:id="@+id/videoView1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:foregroundGravity="center"
-            android:text="Loading..."
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
 
         <!--<TextView-->
         <!--android:id="@+id/textView"-->
