--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -70,11 +70,10 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/gospeechbt"
-            android:layout_width="142dp"
-            android:layout_height="144dp"
-            android:background="@drawable/Llimy1"
-            android:text="I need your help"
-            android:textColor="@android:color/black"/>
+            android:layout_width="138dp"
+            android:layout_height="134dp"
+            android:background="@drawable/llimy1"
+            android:textColor="@android:color/black" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/gomapbt"
