--- a/LDCC-84-3/app/src/main/res/layout/final_result.xml
+++ b/LDCC-84-3/app/src/main/res/layout/final_result.xml
@@ -7,7 +7,8 @@
     android:layout_margin="3dp"
     android:background="@android:color/holo_blue_light"
     android:orientation="horizontal"
-    android:padding="20px">
+    android:padding="20px"
+    android:visibility="invisible">
 
     <ImageView
         android:id="@+id/item_image"
