--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/seveneleven"
+    android:background="@drawable/seveneleven1"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -61,18 +61,18 @@
         <VideoView
             android:id="@+id/videoView1"
             android:layout_width="fill_parent"
-            android:layout_height="234dp"
+            android:layout_height="218dp"
             android:foregroundGravity="center"
             android:text="Loading..."
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp"
-            android:layout_weight="0.97" />
+            android:layout_weight="0.98" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/gospeechbt"
-            android:layout_width="138dp"
-            android:layout_height="134dp"
-            android:background="@drawable/llimy1"
+            android:layout_width="126dp"
+            android:layout_height="93dp"
+            android:background="@drawable/micc"
             android:textColor="@android:color/black" />
 
         <android.support.v7.widget.AppCompatButton
@@ -82,7 +82,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:text="Map Test"
-            
+
             android:visibility="gone" />
 
         <!--<TextView-->
