--- a/LDCC-84-3/app/src/main/res/layout/activity_main_speech.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main_speech.xml
@@ -19,7 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/seveneleven"
+    android:background="@drawable/seveneleven1"
     app:layout_collapseParallaxMultiplier="1.0"
     tools:context="com.example.juni.ldcc_84_3.Speech.MainActivity">
 
@@ -32,34 +32,34 @@
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:layout_height="105dp"
+            android:background="@drawable/biglogo"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:weightSum="1">
 
-            <include
-                layout="@layout/item_result"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
         </android.support.design.widget.AppBarLayout>
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="138dp"
-            app:srcCompat="@drawable/llimy1" />
+        <include
+            layout="@layout/item_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/saytext"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.37"
+            android:layout_height="0dp"
+            android:layout_weight="1.06"
             android:gravity="center"
             android:text="Hello, How can i help you? \n please speak in english"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="23sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="138dp"
+            app:srcCompat="@drawable/listening3" />
         <!--<android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
