배경 아이콘 등 다 바꾸고 마지막 롯데 로고 하나만 더 바꾸면 ui끝

--- a/LDCC-84-3/app/src/main/res/layout/activity_main_speech.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main_speech.xml
@@ -32,7 +32,7 @@
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="105dp"
+            android:layout_height="93dp"
             android:background="@drawable/biglogo"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:weightSum="1">
@@ -59,7 +59,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="138dp"
-            app:srcCompat="@drawable/listening3" />
+            app:srcCompat="@drawable/headphone" />
         <!--<android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
