--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -70,9 +70,9 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/gospeechbt"
-            android:layout_width="126dp"
+            android:layout_width="210dp"
             android:layout_height="93dp"
-            android:background="@drawable/micc"
+            android:background="@drawable/microphone1"
             android:textColor="@android:color/black" />
 
         <android.support.v7.widget.AppCompatButton
