--- a/LDCC-84-3/app/src/main/res/layout/final_result.xml
+++ b/LDCC-84-3/app/src/main/res/layout/final_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="300px"
     android:layout_margin="3dp"
-    android:background="@android:color/holo_blue_light"
+    android:background="@drawable/seveneleven1"
     android:orientation="horizontal"
     android:padding="20px">
     <!--android:visibility="invisible"-->
@@ -48,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="지도 보기"
+
             android:visibility="visible" />
     </LinearLayout>
 
