--- a/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
@@ -25,7 +25,8 @@
         android:layout_weight="3"
         app:srcCompat="@drawable/lotte_logo" />
 
-    <include layout="@layout/final_result" android:id="@+id/item1"></include>
+    <include layout="@layout/final_result" android:id="@+id/item1"
+        android:layout_height="150dp"></include>
 
     <include
         android:id="@+id/item2"
