--- a/LDCC-84-3/app/src/main/res/layout/custom_dialog.xml
+++ b/LDCC-84-3/app/src/main/res/layout/custom_dialog.xml
@@ -9,7 +9,7 @@
         android:id="@+id/img_android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/seven_eleven_small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
