--- a/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
@@ -20,13 +20,15 @@
         android:textSize="18sp" />
 
     <ImageView
+        android:id="@+id/resultad"
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="3"
         app:srcCompat="@drawable/pokemon1" />
 
-    <include layout="@layout/final_result" android:id="@+id/item1"
-        android:layout_height="150dp"></include>
+    <include
+        android:id="@+id/item1"
+        layout="@layout/final_result"></include>
 
     <include
         android:id="@+id/item2"
