--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         android:weightSum="1"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal">
 
         <!--    <android.support.v7.widget.AppCompatButton
         android:id="@+id/gonlbt"
@@ -35,7 +36,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
 
             <TextView
                 android:layout_width="200px"
@@ -53,7 +55,9 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:layout_marginLeft="80dip"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/smalllogo" />
         </LinearLayout>
@@ -62,29 +66,20 @@
             android:id="@+id/videoView1"
             android:layout_width="fill_parent"
             android:layout_height="185dp"
+            android:layout_weight="0.97"
             android:foregroundGravity="center"
             android:text="Loading..."
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp"
-            android:layout_weight="0.20" />
+            tools:layout_editor_absoluteY="0dp" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/gospeechbt"
-            android:layout_width="360dp"
-            android:layout_height="133dp"
-            android:background="@drawable/microphone1"
-            android:textColor="@android:color/black"
-            android:layout_weight="0.03" />
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/gomapbt"
-            android:layout_width="match_parent"
-            android:layout_height="150px"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Map Test"
-
-            android:visibility="gone" />
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_weight="0.03"
+            android:background="@drawable/micc"
+            android:textAlignment="viewStart"
+            android:textColor="@android:color/black" />
 
         <!--<TextView-->
         <!--android:id="@+id/textView"-->
