--- a/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:text="내가 결과를 들고왔소"
         android:textAlignment="center"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <ImageView
