--- a/LDCC-84-3/app/src/main/res/layout/activity_main.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="1"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:weightSum="1"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:gravity="center_horizontal">
+        android:layout_alignParentStart="true">
 
         <!--    <android.support.v7.widget.AppCompatButton
         android:id="@+id/gonlbt"
@@ -35,36 +35,41 @@
             android:text="통합 테스트" />-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
+            android:layout_height="80dp"
+            android:background="@drawable/sevenbg"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="200px"
-                android:layout_height="150px"
+                android:layout_width="0px"
+                android:layout_height="80dp"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:text="Your location"
                 android:textAlignment="center"
                 android:textColor="@android:color/white" />
 
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="0px"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Your location"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                app:srcCompat="@drawable/seven_eleven_middle" />
+
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_width="match_parent"
-                android:layout_height="150px"
+                android:layout_width="0px"
+                android:layout_height="80dp"
                 android:layout_weight="1"></Spinner>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:layout_marginLeft="80dip"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/smalllogo" />
         </LinearLayout>
 
         <VideoView
             android:id="@+id/videoView1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="185dp"
             android:layout_weight="0.97"
             android:foregroundGravity="center"
@@ -72,14 +77,16 @@
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/gospeechbt"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="90sp"
+            android:layout_height="75sp"
             android:layout_weight="0.03"
             android:background="@drawable/micc"
             android:textAlignment="viewStart"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black">
+
+        </Button>
 
         <!--<TextView-->
         <!--android:id="@+id/textView"-->
