--- a/LDCC-84-3/app/src/main/res/layout/activity_main_speech.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_main_speech.xml
@@ -24,10 +24,9 @@
     tools:context="com.example.juni.ldcc_84_3.Speech.MainActivity">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar"
@@ -35,9 +34,39 @@
             android:layout_height="120dp"
             android:background="@drawable/biglogo"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
+            android:visibility="gone"
             android:weightSum="1">
 
         </android.support.design.widget.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@drawable/sevenbg"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0px"
+                android:layout_height="80dp"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="0px"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Your location"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                app:srcCompat="@drawable/seven_eleven_middle" />
+
+            <TextView
+                android:layout_width="0px"
+                android:layout_height="80dp"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <include
             layout="@layout/item_result"
@@ -48,7 +77,7 @@
             android:id="@+id/saytext"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.06"
+            android:layout_weight="4"
             android:gravity="center"
             android:text="Hello, How can i help you? \n please speak in english"
             android:textColor="@android:color/black"
@@ -58,9 +87,9 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="155dp"
-            app:srcCompat="@drawable/headphone"
-            android:layout_weight="0.00" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/headphone" />
         <!--<android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
