--- a/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
+++ b/LDCC-84-3/app/src/main/res/layout/activity_result_activty.xml
@@ -8,23 +8,44 @@
     android:orientation="vertical"
     tools:context="com.example.juni.ldcc_84_3.ResultActivty">
 
-    <TextView
-        android:id="@+id/resulttext"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="내가 결과를 들고왔소"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_height="80dp"
+        android:background="@drawable/sevenbg"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0px"
+            android:layout_height="80dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/resulttext"
+            android:layout_width="0px"
+            android:layout_height="82dp"
+            android:layout_weight="2"
+            android:background="@drawable/resultbg"
+            android:gravity="center"
+            android:text="Your location"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="25px"
+            android:textStyle="bold"
+            app:srcCompat="@drawable/seven_eleven_small" />
+
+        <TextView
+            android:layout_width="0px"
+            android:layout_height="80dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/resultad"
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="3"
-        app:srcCompat="@drawable/pokemon1" />
+        android:layout_weight="1.99"
+        android:padding="10dp" />
 
     <include
         android:id="@+id/item1"
