--- a/LDCC-84-3/app/src/main/res/layout/final_result.xml
+++ b/LDCC-84-3/app/src/main/res/layout/final_result.xml
@@ -1,71 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/resultcontainer"
     android:layout_width="match_parent"
     android:layout_height="300px"
-    android:layout_margin="3dp"
+    android:layout_margin="5dp"
     android:background="@drawable/resultbg"
     android:orientation="horizontal"
-    android:padding="20px"
-    android:visibility="invisible">
-
-
-    <ImageView
-        android:id="@+id/item_image"
-        android:layout_width="0px"
-        android:layout_height="300px"
-        android:layout_gravity="center"
-        android:layout_weight="1.5"
-        android:padding="5dp"
-        app:srcCompat="@drawable/xylitol" />
-
+    android:visibility="visible">
+    <!-- main -->
     <LinearLayout
-        android:layout_width="0px"
+        android:id="@+id/resultcontainer"
+        android:layout_width="match_parent"
         android:layout_height="300px"
-        android:layout_marginLeft="20dp"
-        android:layout_weight="4"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:background="@drawable/resultbg"
+        android:orientation="horizontal"
+        android:visibility="visible">
 
-        <TextView
-            android:id="@+id/item_title"
-            android:layout_width="wrap_content"
+
+        <ImageView
+            android:id="@+id/item_image"
+            android:layout_width="0px"
+            android:layout_height="300px"
+            android:layout_gravity="center"
+            android:layout_weight="1.5"
+            android:padding="5dp"
+            app:srcCompat="@drawable/xylitol" />
+
+        <LinearLayout
+            android:layout_width="0px"
+            android:layout_height="300px"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="4"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="Product"
+                android:textAlignment="textStart"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/item_seven"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="LDCC, Gasan"
+                android:textAlignment="textStart"
+                android:textSize="15dp" />
+
+            <Button
+                android:id="@+id/item_map"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="100dp"
+
+                android:layout_marginTop="10dp"
+                android:background="@drawable/maps"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/item_recbt"
+                android:layout_width="135dp"
+                android:layout_height="63dp"
+                android:layout_marginLeft="100dp"
+
+                android:layout_marginTop="10dp"
+                android:background="@drawable/good"
+                android:visibility="visible" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/item_result"
+            android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_margin="1dp"
-            android:text="Product"
-            android:textAlignment="textStart"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:padding="5dp"
+            app:srcCompat="@drawable/t1" />
 
-        <TextView
-            android:id="@+id/item_seven"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="1dp"
-            android:text="LDCC, Gasan"
-            android:textAlignment="textStart"
-            android:textSize="15dp" />
-
-        <Button
-            android:id="@+id/item_map"
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="100dp"
-
-            android:layout_marginTop="10dp"
-            android:background="@drawable/maps"
-            android:visibility="visible" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/item_result"
+    <!-- recommend -->
+    <LinearLayout
+        android:id="@+id/recommend"
         android:layout_width="0px"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="2"
-        android:padding="5dp"
-        app:srcCompat="@drawable/t1" />
+        android:layout_height="300px"
+        android:layout_weight="6"
+        android:orientation="horizontal"
+        android:visibility="gone">
 
+        <ImageView
+            android:id="@+id/recommend_image1"
+            android:layout_width="0px"
+            android:layout_height="300px"
+            android:layout_gravity="center"
+            android:layout_weight="1.5"
+            android:padding="5dp"
+            app:srcCompat="@drawable/xylitol" />
+
+        <LinearLayout
+            android:layout_width="0px"
+            android:layout_height="300px"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="4"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/recommend_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="Product"
+                android:textAlignment="textStart"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="0dp"
+
+                android:layout_marginTop="10dp"
+                android:background="@drawable/recommend"
+                android:visibility="visible" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/recommend_image2"
+            android:layout_width="0px"
+            android:layout_height="300px"
+            android:layout_gravity="center"
+            android:layout_weight="1.5"
+            android:padding="5dp"
+            app:srcCompat="@drawable/xylitol" />
+
+        <LinearLayout
+            android:layout_width="0px"
+            android:layout_height="300px"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="4"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/recommend_title2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="Product"
+                android:textAlignment="textStart"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="0dp"
+
+                android:layout_marginTop="10dp"
+                android:background="@drawable/recommend"
+                android:visibility="visible" />
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
